Fix brands alignment and add scrollbar

--- a/src/components/shops/style.css
+++ b/src/components/shops/style.css
@@ -1,6 +1,7 @@
 .shop .category {
   padding: 30px;
   height: 90vh;
+  overflow-y: scroll;
 }
 .chead h1 {
   font-size: 20px;
@@ -27,7 +28,6 @@
   box-shadow: rgb(43 52 69 / 10%) 0px 4px 16px;
 }
 .shop .box2 {
-  margin-top: 100px !important;
   text-align: center;
 }
 .shop .category button {
